--- a/website/assets/_scss/_theme.scss
+++ b/website/assets/_scss/_theme.scss
@@ -23,7 +23,7 @@ body {
 }
 
 .advanced-demo-wrapper .vue-file-agent {
-    padding: 0.5rem;
+    padding: 0.5rem !important;
 }
 
 .advanced-demo-wrapper .theme-list .vue-file-agent .file-preview-wrapper .file-preview:before {
