Update docs website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,13 @@
     <meta name="generator" content="Jekyll v3.8.6">
 
 
-    <meta name="twitter:image:src" content="https://safrazik.github.io/vue-file-agent/website/assets/cover.png?v=1.5.3-beta.2" />
+    <meta name="twitter:image:src" content="https://safrazik.github.io/vue-file-agent/website/assets/cover.png?v=1.6.0" />
     <meta name="twitter:site" content="@safrazik" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="{{ site.title }}" />
     <meta name="twitter:description" content="{{ site.description }}" />
 
-    <meta property="og:image" content="https://safrazik.github.io/vue-file-agent/website/assets/cover.png?v=1.5.3-beta.2" />
+    <meta property="og:image" content="https://safrazik.github.io/vue-file-agent/website/assets/cover.png?v=1.6.0" />
     <meta property="og:site_name" content="GitHub" />
     <meta property="og:type" content="object" />
     <meta property="og:title" content="{{ site.title }}" />
@@ -29,11 +29,11 @@
 
 
     {% if layout.external_urls %}
-    <link rel="stylesheet" href="https://safrazik.github.io/vue-file-agent/website/assets/styles.css?v=1.5.3-beta.2">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-file-agent@1.5.3-beta.2/dist/vue-file-agent.css">
+    <link rel="stylesheet" href="https://safrazik.github.io/vue-file-agent/website/assets/styles.css?v=1.6.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-file-agent@1.6.0/dist/vue-file-agent.css">
     {% else %}
-    <link rel="stylesheet" href="{{ "/website/assets/styles.css?v=1.5.3-beta.2" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/vue-file-agent.css?v=1.5.3-beta.2" | prepend: site.dist_baseurl }}">
+    <link rel="stylesheet" href="{{ "/website/assets/styles.css?v=1.6.0" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/vue-file-agent.css?v=1.6.0" | prepend: site.dist_baseurl }}">
     {% endif %}
 
     {% if site.google_analytics %}
@@ -62,7 +62,7 @@
     <div class="container" style="padding-left: 15px;
       padding-right: 15px;">
       <a class="navbar-brand" href="{{ "/" | prepend: site_base_url }}">
-        <img style="width: 40px; height: 40px; border-radius: 50%;" src="{{ "/website/assets/logo.png?v=1.5.3-beta.2" | prepend: site_base_url }}">
+        <img style="width: 40px; height: 40px; border-radius: 50%;" src="{{ "/website/assets/logo.png?v=1.6.0" | prepend: site_base_url }}">
         Vue File Agent
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,9 +87,9 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tus-js-client@1.8.0/dist/tus.js"></script>
   {% if layout.external_urls %}
-  <script src="https://cdn.jsdelivr.net/npm/vue-file-agent@1.5.3-beta.2/dist/vue-file-agent.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue-file-agent@1.6.0/dist/vue-file-agent.umd.js"></script>
   {% else %}
-  <script src='{{ "/vue-file-agent.umd.js?v=1.5.3-beta.2" | prepend: site.dist_baseurl }}'></script>
+  <script src='{{ "/vue-file-agent.umd.js?v=1.6.0" | prepend: site.dist_baseurl }}'></script>
   {% endif %}
 
   <script src="https://unpkg.com/vue-slicksort@latest/dist/vue-slicksort.min.js"></script>
