Fix #45 Restrict dismissing client errors

--- a/src/scss/_file-error.scss
+++ b/src/scss/_file-error.scss
@@ -5,7 +5,7 @@
     right: 0;
     color: #fff;
     bottom: 25px;
-    z-index: 900;
+    z-index: 499;
     padding: 10px;
     // background: #ea2626;
     // background: rgba(234, 38, 38, 0.85);
@@ -20,6 +20,7 @@
       height: auto;
       color: #fff;
       padding: 0 5px;
+      display: block;
     }
   }
 }
