--- a/_layouts/example.html
+++ b/_layouts/example.html
@@ -2,6 +2,7 @@
 layout: default
 external_urls: true
 ---
+
 <script type="text/javascript">
   {% include_relative src/demo/demo-base.js %}
 </script>
@@ -12,12 +13,12 @@ external_urls: true
       {{ content }}
     </div>
   </div>
-  <div class="container">
-    <div id="demo-advanced-wrapper">
-      {% capture demo_advanced %}
-        {% include_relative src/demo/demo-advanced.vue %}
-      {% endcapture %}
-      {% include_relative website/includes/vue-code.md name="demo_advanced" code=demo_advanced result_only=true %}
+  <div class="advanced-demo-wrapper">
+    <div class="container">
+      <div id="demo-advanced-wrapper">
+        {% capture demo_advanced %} {% include_relative src/demo/demo-advanced.vue %} {% endcapture %} {%
+        include_relative website/includes/vue-code.md name="demo_advanced" code=demo_advanced result_only=true %}
+      </div>
     </div>
   </div>
 </div>
