--- a/website/assets/_scss/_main.scss
+++ b/website/assets/_scss/_main.scss
@@ -1,73 +1,72 @@
-
-
-
-
 .main-header {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
-	// border-bottom: 1px solid red;
-	margin-bottom: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  // border-bottom: 1px solid red;
+  margin-bottom: 1rem;
 
-	padding-top: 1.5rem;
-	margin-bottom: 3rem;
+  padding-top: 1.5rem;
+  margin-bottom: 3rem;
 
-	.tagline {
-		color: #AAA;
-		font-style: italic;
-		// font-size: 0.75rem;
-	}
+  .tagline {
+    color: #aaa;
+    font-style: italic;
+    // font-size: 0.75rem;
+  }
 }
 
 .main-content {
-	// max-width: 38rem;
-	// margin-left:  auto;
-	// margin-right: auto;
+  // max-width: 38rem;
+  // margin-left:  auto;
+  // margin-right: auto;
 }
 
 .post {
-	margin-bottom: 2rem;
-	.post-header {
-		margin-bottom: 1rem;
-		.post-date {
-			margin-bottom: 0;
-		}
-	}
+  margin-bottom: 2rem;
+  .post-header {
+    margin-bottom: 1rem;
+    .post-date {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .posts .post {
-	margin-bottom: 3.5rem;
+  margin-bottom: 3.5rem;
 }
 
 .related {
-	padding-top: 1rem;
-	margin-top: 2rem;
-	display: none;
+  padding-top: 1rem;
+  margin-top: 2rem;
+  display: none;
 }
 
 #disqus_thread {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 /* hide the nprogress spinner (in case the javascript setting doesn't work) */
 #nprogress .spinner {
-	display: none !important;
+  display: none !important;
 }
 
-#see-it-in-action, #see-it-in-action + p {
+#see-it-in-action,
+#see-it-in-action + p {
 }
 
-#live-demo + p, .readme-content img {
-	display: none;
+#live-demo + p,
+.readme-content #live-demo--codepen-playground + p img {
+  display: none;
 }
 
-#live-demo, #live-demo-1 {
-	display: none;
+#live-demo,
+#live-demo-1 {
+  display: none;
 }
 
 #codepen-playground {
-	display: none;
+  display: none;
 }
 
 #live-demo--codepen-playground {
-	display: none;
+  display: none;
 }
