--- a/packages/core-file-agent/src/scss/_file-name-edit.scss
+++ b/packages/core-file-agent/src/scss/_file-name-edit.scss
@@ -17,6 +17,10 @@
     text-align: inherit;
     opacity: 0;
     z-index: -5;
+    height: 28px;
+    line-height: 28px;
+    font-size: 16px;
+    font-family: inherit;
   }
 
   .file-name .file-name-edit-icon svg {
