Add complete transitions support

--- a/packages/core/src/components/file-agent.html
+++ b/packages/core/src/components/file-agent.html
@@ -3,7 +3,10 @@
   <div data-ref="container" class="grid-block-wrapper vue-file-agent file-input-wrapper">
     <div data-slot="beforeInner"></div>
     <div data-ref="file-preview-list" class="file-preview-list">
-      <div data-ref="file-preview-new" class="file-preview-wrapper grid-box-item grid-block file-preview-new">
+      <div
+        data-ref="file-preview-new"
+        class="file-preview-wrapper grid-box-item-for-transition grid-block file-preview-new"
+      >
         <span class="file-preview">
           <span style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;">
             <icon name="system-file-preview-new"></icon>
