Improve build flow

--- a/packages/core/src/scss/_file-error.scss
+++ b/packages/core/src/scss/_file-error.scss
@@ -10,7 +10,7 @@
     // background: #ea2626;
     // background: rgba(234, 38, 38, 0.85);
     top: 28px;
-    font-size: 14px;
+    font-size: 0.875em;
     display: flex;
     align-items: center;
 
