--- a/packages/core/src/scss/_file-name-edit.scss
+++ b/packages/core/src/scss/_file-name-edit.scss
@@ -19,7 +19,7 @@
     z-index: -5;
     height: 28px;
     line-height: 28px;
-    font-size: 16px;
+    font-size: 1em;
     font-family: inherit;
   }
 
