--- a/packages/core/src/scss/_file-preview-new.scss
+++ b/packages/core/src/scss/_file-preview-new.scss
@@ -17,7 +17,7 @@
     .help-text {
       color: #aaa;
       text-align: center;
-      font-size: 16px;
+      font-size: 1em;
       line-height: 20px;
       height: 20px;
       display: block;
