Core: sorting, transition

--- a/packages/core/src/components/file-agent.html
+++ b/packages/core/src/components/file-agent.html
@@ -1,6 +1,6 @@
 <div data-ref="wrapper">
   <div data-slot="beforeOuter"></div>
-  <div data-ref="container" class="grid-block-wrapper vue-file-agent file-input-wrapper">
+  <div data-ref="container" class="grid-block-wrapper file-agent file-input-wrapper">
     <div data-slot="beforeInner"></div>
     <div data-ref="file-preview-list" class="file-preview-list">
       <div
