--- a/src/scss/_file-preview.scss
+++ b/src/scss/_file-preview.scss
@@ -30,7 +30,7 @@
     .file-preview-img {
       max-width: 100%;
       max-height: 100%;
-      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="16" height="16" viewBox="0 0 16 16"><rect x="0" y="0" width="100%" height="100%" fill="rgba(255, 255, 255, 0.1)" /><rect x="50%" y="0" width="50%" height="50%" fill="rgba(0, 0, 0, 0.075)" /><rect x="0" y="50%" width="50%" height="50%" fill="rgba(0, 0, 0, 0.075)" /></svg>');
+      background-image: url("data:image/svg+xml,,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' width='16' height='16' viewBox='0 0 16 16'%3E%3Crect x='0' y='0' width='100%25' height='100%25' fill='rgba(255, 255, 255, 0.1)' /%3E%3Crect x='50%25' y='0' width='50%25' height='50%25' fill='rgba(0, 0, 0, 0.075)' /%3E%3Crect x='0' y='50%25' width='50%25' height='50%25' fill='rgba(0, 0, 0, 0.075)' /%3E%3C/svg%3E");
       background-repeat: repeat;
       position: absolute;
       left: 50%;
