This Commit Implements New feature #204 Showing a Loader while image or video is being loaded

--- a/src/scss/_file-preview-wrapper.scss
+++ b/src/scss/_file-preview-wrapper.scss
@@ -49,6 +49,16 @@
     }
   }
 
+  .file-loader-overlay {
+    content: url('../assets/loading-spinner.svg');
+    position: absolute;
+    top: 30%;
+    right: 0;
+    bottom: 0;
+    left: 30%;
+    z-index: 4;
+  }
+
   .file-category-audio-playable,
   .file-category-video-playable {
     .file-preview .file-icon {
